# mcp-notes

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/notes/: __init__.py  prompts.py  resources.py  server.py  storage.py
src/notes/tools/: __init__.py  handle_tools.py  list_tools.py
